--- a/coin-main/templatemo_607_glass_admin/index.html
+++ b/coin-main/templatemo_607_glass_admin/index.html
@@ -113,7 +113,7 @@ https://templatemo.com/tm-607-glass-admin
         </aside>
 
         <!-- Main Content -->
-        <main class="main-content">
+        <main class="main-content" data-dashboard="overview" data-source="data/dashboard.json">
             <!-- Top Navbar -->
             <nav class="navbar">
                 <h1 class="page-title">Dashboard Overview</h1>
@@ -149,14 +149,14 @@ https://templatemo.com/tm-607-glass-admin
 
             <!-- Stats Cards -->
             <section class="stats-grid">
-                <div class="glass-card glass-card-3d stat-card">
+                <div class="glass-card glass-card-3d stat-card" data-stat-key="revenue">
                     <div class="stat-card-inner">
                         <div class="stat-info">
-                            <h3>Total Revenue</h3>
-                            <div class="stat-value">$84,254</div>
+                            <h3 data-stat-title>Total Revenue</h3>
+                            <div class="stat-value" data-stat-value>$84,254</div>
                             <span class="stat-change positive">
                                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"/></svg>
-                                +12.5%
+                                <span data-stat-change>+12.5%</span>
                             </span>
                         </div>
                         <div class="stat-icon cyan">
@@ -167,14 +167,14 @@ https://templatemo.com/tm-607-glass-admin
                     </div>
                 </div>
 
-                <div class="glass-card glass-card-3d stat-card">
+                <div class="glass-card glass-card-3d stat-card" data-stat-key="users">
                     <div class="stat-card-inner">
                         <div class="stat-info">
-                            <h3>Active Users</h3>
-                            <div class="stat-value">24,521</div>
+                            <h3 data-stat-title>Active Users</h3>
+                            <div class="stat-value" data-stat-value>24,521</div>
                             <span class="stat-change positive">
                                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"/></svg>
-                                +8.2%
+                                <span data-stat-change>+8.2%</span>
                             </span>
                         </div>
                         <div class="stat-icon magenta">
@@ -186,14 +186,14 @@ https://templatemo.com/tm-607-glass-admin
                     </div>
                 </div>
 
-                <div class="glass-card glass-card-3d stat-card">
+                <div class="glass-card glass-card-3d stat-card" data-stat-key="orders">
                     <div class="stat-card-inner">
                         <div class="stat-info">
-                            <h3>Total Orders</h3>
-                            <div class="stat-value">8,461</div>
+                            <h3 data-stat-title>Total Orders</h3>
+                            <div class="stat-value" data-stat-value>8,461</div>
                             <span class="stat-change negative">
                                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="23 18 13.5 8.5 8.5 13.5 1 6"/></svg>
-                                -3.1%
+                                <span data-stat-change>-3.1%</span>
                             </span>
                         </div>
                         <div class="stat-icon purple">
@@ -205,14 +205,14 @@ https://templatemo.com/tm-607-glass-admin
                     </div>
                 </div>
 
-                <div class="glass-card glass-card-3d stat-card">
+                <div class="glass-card glass-card-3d stat-card" data-stat-key="conversion">
                     <div class="stat-card-inner">
                         <div class="stat-info">
-                            <h3>Conversion Rate</h3>
-                            <div class="stat-value">3.24%</div>
+                            <h3 data-stat-title>Conversion Rate</h3>
+                            <div class="stat-value" data-stat-value>3.24%</div>
                             <span class="stat-change positive">
                                 <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="23 6 13.5 15.5 8.5 10.5 1 18"/></svg>
-                                +2.4%
+                                <span data-stat-change>+2.4%</span>
                             </span>
                         </div>
                         <div class="stat-icon success">
@@ -230,8 +230,8 @@ https://templatemo.com/tm-607-glass-admin
                 <div class="glass-card chart-card">
                     <div class="card-header">
                         <div>
-                            <h2 class="card-title">Revenue Analytics</h2>
-                            <p class="card-subtitle">Monthly revenue overview</p>
+                            <h2 class="card-title" data-chart-title>Revenue Analytics</h2>
+                            <p class="card-subtitle" data-chart-subtitle>Monthly revenue overview</p>
                         </div>
                         <div class="card-actions">
                             <button class="card-btn active">Monthly</button>
@@ -249,20 +249,7 @@ https://templatemo.com/tm-607-glass-admin
                                 <span class="y-value">$20K</span>
                                 <span class="y-value">$0</span>
                             </div>
-                            <div class="chart-placeholder">
-                                <div class="chart-bar-group"><div class="chart-bar bar-emerald" style="height: 120px;"></div><span class="chart-label">Jan</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-gold" style="height: 160px;"></div><span class="chart-label">Feb</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-coral" style="height: 90px;"></div><span class="chart-label">Mar</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-teal" style="height: 140px;"></div><span class="chart-label">Apr</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-amber" style="height: 180px;"></div><span class="chart-label">May</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-emerald" style="height: 130px;"></div><span class="chart-label">Jun</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-gold" style="height: 170px;"></div><span class="chart-label">Jul</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-coral" style="height: 150px;"></div><span class="chart-label">Aug</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-teal" style="height: 190px;"></div><span class="chart-label">Sep</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-amber" style="height: 140px;"></div><span class="chart-label">Oct</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-emerald" style="height: 175px;"></div><span class="chart-label">Nov</span></div>
-                                <div class="chart-bar-group"><div class="chart-bar bar-gold" style="height: 200px;"></div><span class="chart-label">Dec</span></div>
-                            </div>
+                            <div class="chart-placeholder" data-chart-bars></div>
                         </div>
                     </div>
                 </div>
@@ -275,43 +262,7 @@ https://templatemo.com/tm-607-glass-admin
                             <p class="card-subtitle">Latest transactions</p>
                         </div>
                     </div>
-                    <div class="activity-list">
-                        <div class="activity-item">
-                            <div class="activity-avatar" style="background: linear-gradient(135deg, var(--emerald-light), var(--emerald));">JD</div>
-                            <div class="activity-content">
-                                <p class="activity-text"><strong>John Doe</strong> purchased Premium Plan</p>
-                                <span class="activity-time">2 minutes ago</span>
-                            </div>
-                        </div>
-                        <div class="activity-item">
-                            <div class="activity-avatar" style="background: linear-gradient(135deg, var(--gold), var(--amber));">AS</div>
-                            <div class="activity-content">
-                                <p class="activity-text"><strong>Anna Smith</strong> submitted a support ticket</p>
-                                <span class="activity-time">15 minutes ago</span>
-                            </div>
-                        </div>
-                        <div class="activity-item">
-                            <div class="activity-avatar" style="background: linear-gradient(135deg, var(--coral), var(--gold));">MJ</div>
-                            <div class="activity-content">
-                                <p class="activity-text"><strong>Mike Johnson</strong> upgraded subscription</p>
-                                <span class="activity-time">1 hour ago</span>
-                            </div>
-                        </div>
-                        <div class="activity-item">
-                            <div class="activity-avatar" style="background: linear-gradient(135deg, var(--success), var(--emerald));">EW</div>
-                            <div class="activity-content">
-                                <p class="activity-text"><strong>Emily White</strong> completed onboarding</p>
-                                <span class="activity-time">2 hours ago</span>
-                            </div>
-                        </div>
-                        <div class="activity-item">
-                            <div class="activity-avatar" style="background: linear-gradient(135deg, var(--warning), var(--gold));">RB</div>
-                            <div class="activity-content">
-                                <p class="activity-text"><strong>Robert Brown</strong> requested refund</p>
-                                <span class="activity-time">3 hours ago</span>
-                            </div>
-                        </div>
-                    </div>
+                    <div class="activity-list" data-activity-list></div>
                 </div>
 
                 <!-- Data Table -->
@@ -337,43 +288,7 @@ https://templatemo.com/tm-607-glass-admin
                                     <th>Amount</th>
                                 </tr>
                             </thead>
-                            <tbody>
-                                <tr>
-                                    <td><div class="table-user"><div class="table-avatar" style="background: linear-gradient(135deg, var(--emerald-light), var(--emerald));">JD</div><div class="table-user-info"><span class="table-user-name">John Doe</span><span class="table-user-email">john@example.com</span></div></div></td>
-                                    <td>Premium Plan</td>
-                                    <td>Jan 15, 2025</td>
-                                    <td><span class="status-badge completed">Completed</span></td>
-                                    <td><span class="table-amount">$299.00</span></td>
-                                </tr>
-                                <tr>
-                                    <td><div class="table-user"><div class="table-avatar" style="background: linear-gradient(135deg, var(--gold), var(--amber));">AS</div><div class="table-user-info"><span class="table-user-name">Anna Smith</span><span class="table-user-email">anna@example.com</span></div></div></td>
-                                    <td>Enterprise License</td>
-                                    <td>Jan 14, 2025</td>
-                                    <td><span class="status-badge processing">Processing</span></td>
-                                    <td><span class="table-amount">$1,499.00</span></td>
-                                </tr>
-                                <tr>
-                                    <td><div class="table-user"><div class="table-avatar" style="background: linear-gradient(135deg, var(--success), var(--emerald));">MJ</div><div class="table-user-info"><span class="table-user-name">Mike Johnson</span><span class="table-user-email">mike@example.com</span></div></div></td>
-                                    <td>Team Bundle</td>
-                                    <td>Jan 13, 2025</td>
-                                    <td><span class="status-badge completed">Completed</span></td>
-                                    <td><span class="table-amount">$599.00</span></td>
-                                </tr>
-                                <tr>
-                                    <td><div class="table-user"><div class="table-avatar" style="background: linear-gradient(135deg, var(--coral), var(--gold));">EW</div><div class="table-user-info"><span class="table-user-name">Emily White</span><span class="table-user-email">emily@example.com</span></div></div></td>
-                                    <td>Starter Plan</td>
-                                    <td>Jan 12, 2025</td>
-                                    <td><span class="status-badge pending">Pending</span></td>
-                                    <td><span class="table-amount">$49.00</span></td>
-                                </tr>
-                                <tr>
-                                    <td><div class="table-user"><div class="table-avatar" style="background: linear-gradient(135deg, var(--emerald), var(--gold));">RB</div><div class="table-user-info"><span class="table-user-name">Robert Brown</span><span class="table-user-email">robert@example.com</span></div></div></td>
-                                    <td>Pro Annual</td>
-                                    <td>Jan 11, 2025</td>
-                                    <td><span class="status-badge completed">Completed</span></td>
-                                    <td><span class="table-amount">$199.00</span></td>
-                                </tr>
-                            </tbody>
+                            <tbody data-transaction-rows></tbody>
                         </table>
                     </div>
                 </div>
@@ -410,22 +325,13 @@ https://templatemo.com/tm-607-glass-admin
                     </div>
                     <div class="donut-container">
                         <div class="donut-chart">
-                            <svg width="140" height="140" viewBox="0 0 140 140">
-                                <circle class="donut-bg" cx="70" cy="70" r="54"/>
-                                <circle class="donut-segment" cx="70" cy="70" r="54" stroke="var(--emerald-light)" stroke-dasharray="169.6 339.3" stroke-dashoffset="0"/>
-                                <circle class="donut-segment" cx="70" cy="70" r="54" stroke="var(--gold)" stroke-dasharray="101.8 339.3" stroke-dashoffset="-169.6"/>
-                                <circle class="donut-segment" cx="70" cy="70" r="54" stroke="var(--coral)" stroke-dasharray="67.9 339.3" stroke-dashoffset="-271.4"/>
-                            </svg>
+                            <svg width="140" height="140" viewBox="0 0 140 140" data-traffic-svg></svg>
                             <div class="donut-center">
-                                <div class="donut-value">24.5K</div>
-                                <div class="donut-label">Visitors</div>
+                                <div class="donut-value" data-traffic-value>24.5K</div>
+                                <div class="donut-label" data-traffic-label>Visitors</div>
                             </div>
                         </div>
-                        <div class="donut-legend">
-                            <div class="legend-item"><span class="legend-color cyan"></span><span>Organic Search (50%)</span></div>
-                            <div class="legend-item"><span class="legend-color magenta"></span><span>Social Media (30%)</span></div>
-                            <div class="legend-item"><span class="legend-color purple"></span><span>Direct Traffic (20%)</span></div>
-                        </div>
+                        <div class="donut-legend" data-traffic-legend></div>
                     </div>
                 </div>
 
@@ -437,22 +343,7 @@ https://templatemo.com/tm-607-glass-admin
                             <p class="card-subtitle">Current sprint status</p>
                         </div>
                     </div>
-                    <div class="progress-item">
-                        <div class="progress-header"><span class="progress-label">UI Design</span><span class="progress-value">85%</span></div>
-                        <div class="progress-bar"><div class="progress-fill cyan" style="width: 85%;"></div></div>
-                    </div>
-                    <div class="progress-item">
-                        <div class="progress-header"><span class="progress-label">Backend API</span><span class="progress-value">62%</span></div>
-                        <div class="progress-bar"><div class="progress-fill magenta" style="width: 62%;"></div></div>
-                    </div>
-                    <div class="progress-item">
-                        <div class="progress-header"><span class="progress-label">Testing</span><span class="progress-value">45%</span></div>
-                        <div class="progress-bar"><div class="progress-fill purple" style="width: 45%;"></div></div>
-                    </div>
-                    <div class="progress-item">
-                        <div class="progress-header"><span class="progress-label">Documentation</span><span class="progress-value">28%</span></div>
-                        <div class="progress-bar"><div class="progress-fill cyan" style="width: 28%;"></div></div>
-                    </div>
+                    <div data-progress-list></div>
                 </div>
             </section>
         </main>
