--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -11,8 +11,64 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
   <link rel="stylesheet" href="style.css"/>
+  <style>
+    body.user-template-scope .card,
+    body.user-template-scope .card-header,
+    body.user-template-scope .card-body,
+    body.user-template-scope .modal-content,
+    body.user-template-scope .modal-header,
+    body.user-template-scope .modal-body,
+    body.user-template-scope .modal-footer,
+    body.user-template-scope .dropdown-menu,
+    body.user-template-scope .list-group-item,
+    body.user-template-scope .table,
+    body.user-template-scope .table th,
+    body.user-template-scope .table td,
+    body.user-template-scope .form-control,
+    body.user-template-scope .form-select,
+    body.user-template-scope .input-group-text,
+    body.user-template-scope .nav-tabs .nav-link,
+    body.user-template-scope .tab-content,
+    body.user-template-scope .alert,
+    body.user-template-scope .pagination .page-link,
+    body.user-template-scope .bg-light,
+    body.user-template-scope .bg-white {
+      background: rgba(20, 24, 40, 0.6) !important;
+      color: #e4ecff;
+      border-color: rgba(255, 255, 255, 0.08);
+      backdrop-filter: blur(16px);
+    }
+
+    body.user-template-scope .table th,
+    body.user-template-scope .table td {
+      background: transparent !important;
+    }
+
+    body.user-template-scope .nav-tabs .nav-link.active,
+    body.user-template-scope .dropdown-menu .dropdown-item.active,
+    body.user-template-scope .pagination .page-link.active {
+      background: rgba(255, 255, 255, 0.08) !important;
+      color: #fff;
+      border-color: rgba(255, 255, 255, 0.18);
+    }
+
+    body.user-template-scope .list-group-item {
+      border-color: rgba(255, 255, 255, 0.08);
+    }
+
+    body.user-template-scope .badge,
+    body.user-template-scope .badge.bg-success-subtle,
+    body.user-template-scope .badge.bg-warning-subtle {
+      background: rgba(255, 255, 255, 0.12) !important;
+      color: #fff !important;
+    }
+
+    body.user-template-scope .form-control::placeholder {
+      color: rgba(228, 236, 255, 0.6);
+    }
+  </style>
 </head>
-<body>
+<body class="user-template-scope">
   <div class="background"></div>
   <div class="orb orb-1"></div>
   <div class="orb orb-2"></div>
@@ -41,13 +97,21 @@
 
         <form id="userLoginForm">
           <div class="form-group">
-            <label class="form-label" for="loginEmail">Email</label>
-            <input type="email" id="loginEmail" class="form-input" placeholder="Entrez votre email" required/>
+            <label class="form-label" for="loginEmail">Adresse email</label>
+            <input type="email" id="loginEmail" class="form-input" placeholder="Entrez votre email" required>
           </div>
 
           <div class="form-group">
             <label class="form-label" for="loginPassword">Mot de passe</label>
-            <input type="password" id="loginPassword" class="form-input" placeholder="Entrez votre mot de passe" required/>
+            <input type="password" id="loginPassword" class="form-input" placeholder="Entrez votre mot de passe" required>
+          </div>
+
+          <div class="form-row">
+            <label class="checkbox-label">
+              <input type="checkbox" checked>
+              Se souvenir de moi
+            </label>
+            <a href="#" class="forgot-link">Mot de passe oublié ?</a>
           </div>
 
           <button type="submit" class="btn btn-primary">
@@ -75,43 +139,72 @@
           <ul>
             <li class="nav-item">
               <a class="nav-link active" data-bs-toggle="pill" href="#dashboard">
-                <i class="fas fa-tachometer-alt nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="3" y="3" width="7" height="7" rx="1"/>
+                  <rect x="14" y="3" width="7" height="7" rx="1"/>
+                  <rect x="3" y="14" width="7" height="7" rx="1"/>
+                  <rect x="14" y="14" width="7" height="7" rx="1"/>
+                </svg>
                 Accueil
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#deposit">
-                <i class="fas fa-money-bill-wave nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                  <path d="M2 17l10 5 10-5"/>
+                  <path d="M2 12l10 5 10-5"/>
+                </svg>
                 Dépôt
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#withdraw">
-                <i class="fas fa-hand-holding-usd nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                  <circle cx="9" cy="7" r="4"/>
+                  <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                  <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                </svg>
                 Retrait
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#Profil">
-                <i class="fas fa-user nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="12" cy="12" r="3"/>
+                  <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/>
+                </svg>
                 Profil
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#trading">
-                <i class="fas fa-chart-line nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <rect x="3" y="3" width="7" height="7" rx="1"/>
+                  <rect x="14" y="3" width="7" height="7" rx="1"/>
+                  <rect x="3" y="14" width="7" height="7" rx="1"/>
+                  <rect x="14" y="14" width="7" height="7" rx="1"/>
+                </svg>
                 Trading
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#kyc">
-                <i class="fas fa-id-card nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                  <path d="M2 17l10 5 10-5"/>
+                  <path d="M2 12l10 5 10-5"/>
+                </svg>
                 KYC
               </a>
             </li>
             <li class="nav-item">
               <a class="nav-link" data-bs-toggle="pill" href="#offers">
-                <i class="fas fa-gift nav-icon"></i>
+                <svg class="nav-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                  <circle cx="12" cy="12" r="3"/>
+                  <path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/>
+                </svg>
                 Offres
               </a>
             </li>
@@ -134,6 +227,13 @@
       <nav class="navbar">
         <h1 class="page-title">Bonjour, <span id="firstname"></span></h1>
         <div class="navbar-right">
+          <div class="search-box">
+            <svg class="search-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="11" cy="11" r="8"/>
+              <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+            </svg>
+            <input type="text" class="search-input" placeholder="Rechercher...">
+          </div>
           <div class="dropdown position-relative">
             <button aria-expanded="false" class="nav-btn" data-bs-toggle="dropdown" id="notificationsDropdownButton" type="button">
               <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
@@ -144,7 +244,11 @@
             </button>
             <ul aria-labelledby="notificationsDropdownButton" class="dropdown-menu dropdown-menu-end" id="notificationsRecentes" style="min-width: 300px;">
               <li class="dropdown-header">
-                <i class="fas fa-bell me-2"></i> Notifications récentes
+                <svg class="me-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                  <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/>
+                  <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
+                </svg>
+                Notifications récentes
               </li>
               <li><hr class="dropdown-divider"/></li>
               <li id="notificationsDropdown" class="text-center text-muted py-3"></li>
@@ -154,13 +258,31 @@
               </li>
             </ul>
           </div>
+          <button class="nav-btn" type="button" title="Toggle Light/Dark Mode">
+            <svg class="icon-sun" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+              <circle cx="12" cy="12" r="4"/>
+              <path d="M12 2v2"/><path d="M12 20v2"/>
+              <path d="M4.93 4.93l1.41 1.41"/><path d="M17.66 17.66l1.41 1.41"/>
+              <path d="M2 12h2"/><path d="M20 12h2"/>
+              <path d="M6.34 17.66l-1.41 1.41"/><path d="M19.07 4.93l-1.41 1.41"/>
+            </svg>
+          </button>
           <div class="dropdown">
             <button aria-expanded="false" class="nav-btn" data-bs-toggle="dropdown" id="languageDropdown" type="button">
-              <i class="fas fa-globe"></i>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <circle cx="12" cy="12" r="10"/>
+                <line x1="2" y1="12" x2="22" y2="12"/>
+                <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+              </svg>
             </button>
             <ul aria-labelledby="languageDropdown" class="dropdown-menu dropdown-menu-end">
               <li class="dropdown-header">
-                <i class="fas fa-language me-2"></i> Choisissez la langue
+                <svg class="me-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                  <circle cx="12" cy="12" r="10"/>
+                  <line x1="2" y1="12" x2="22" y2="12"/>
+                  <path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"/>
+                </svg>
+                Choisissez la langue
               </li>
               <li><hr class="dropdown-divider"/></li>
               <li><a class="dropdown-item active" href="#" onclick="changeLanguage('ar')"><i class="fas fa-check me-2"></i> Français</a></li>
@@ -170,7 +292,10 @@
           </div>
           <div class="dropdown">
             <button aria-expanded="false" class="nav-btn" data-bs-toggle="dropdown" id="accountDropdown" type="button">
-              <i class="fas fa-user-circle"></i>
+              <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                <path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"/>
+                <circle cx="12" cy="7" r="4"/>
+              </svg>
             </button>
             <ul aria-labelledby="accountDropdown" class="dropdown-menu dropdown-menu-end" style="min-width: 250px;">
               <li class="dropdown-header text-center">
@@ -185,7 +310,12 @@
               <li><hr class="dropdown-divider"/></li>
               <li>
                 <a class="dropdown-item text-danger" href="#" onclick="logout()">
-                  <i class="fas fa-sign-out-alt me-2"></i>Se déconnecter
+                  <svg class="me-2" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" width="18" height="18">
+                    <path d="M9 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h4"/>
+                    <polyline points="16 17 21 12 16 7"/>
+                    <line x1="21" y1="12" x2="9" y2="12"/>
+                  </svg>
+                  Se déconnecter
                 </a>
               </li>
             </ul>
@@ -203,7 +333,9 @@
                   <div class="stat-value" id="soldeTotal">--- $</div>
                 </div>
                 <div class="stat-icon cyan">
-                  <i class="fas fa-wallet"></i>
+                  <svg viewBox="0 0 24 24" fill="none" stroke="var(--emerald-light)" stroke-width="2">
+                    <line x1="12" y1="1" x2="12" y2="23"/><path d="M17 5H9.5a3.5 3.5 0 0 0 0 7h5a3.5 3.5 0 0 1 0 7H6"/>
+                  </svg>
                 </div>
               </div>
             </div>
@@ -214,7 +346,10 @@
                   <div class="stat-value" id="totalDepots">--- $</div>
                 </div>
                 <div class="stat-icon magenta">
-                  <i class="fas fa-arrow-circle-down"></i>
+                  <svg viewBox="0 0 24 24" fill="none" stroke="var(--gold)" stroke-width="2">
+                    <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/>
+                    <path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                  </svg>
                 </div>
               </div>
             </div>
@@ -225,7 +360,10 @@
                   <div class="stat-value" id="profit">--- $</div>
                 </div>
                 <div class="stat-icon purple">
-                  <i class="fas fa-chart-line"></i>
+                  <svg viewBox="0 0 24 24" fill="none" stroke="var(--coral)" stroke-width="2">
+                    <circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/>
+                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/>
+                  </svg>
                 </div>
               </div>
             </div>
@@ -236,7 +374,9 @@
                   <div class="stat-value" id="nbTransactions">---</div>
                 </div>
                 <div class="stat-icon success">
-                  <i class="fas fa-exchange-alt"></i>
+                  <svg viewBox="0 0 24 24" fill="none" stroke="var(--success)" stroke-width="2">
+                    <polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/>
+                  </svg>
                 </div>
               </div>
             </div>
