--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -13,15 +13,22 @@
   <link rel="stylesheet" href="style.css"/>
   <style>
     body.user-template-scope {
-      --glass-bg: rgba(90, 255, 210, 0.08);
-      --glass-bg-strong: rgba(90, 255, 210, 0.14);
-      --glass-border: rgba(120, 255, 220, 0.22);
-      --glass-border-strong: rgba(140, 255, 230, 0.32);
-      --glass-shadow: 0 18px 40px rgba(6, 16, 28, 0.45);
-      --glass-blur: blur(18px) saturate(165%);
+      --glass-bg: rgba(12, 22, 18, 0.55);
+      --glass-bg-2: rgba(80, 255, 200, 0.06);
+      --glass-border: rgba(160, 255, 220, 0.18);
+      --glass-border-strong: rgba(190, 255, 230, 0.28);
+      --glass-shadow: 0 18px 40px rgba(3, 8, 12, 0.6);
+      --glass-blur: 16px;
+      --glass-sat: 155%;
       --glass-highlight: linear-gradient(135deg, rgba(255, 255, 255, 0.12), rgba(120, 255, 210, 0.04));
       --glass-text: #e6f7f2;
       --glass-muted: rgba(230, 247, 242, 0.7);
+      background:
+        radial-gradient(900px 500px at 25% 0%, rgba(40, 255, 170, 0.16), transparent 55%),
+        radial-gradient(700px 500px at 20% 85%, rgba(255, 170, 90, 0.1), transparent 60%),
+        radial-gradient(700px 500px at 60% 75%, rgba(160, 120, 255, 0.08), transparent 60%),
+        linear-gradient(180deg, #0a1410 0%, #07100c 100%);
+      color: var(--glass-text);
     }
 
     body.user-template-scope .glass-card,
@@ -58,15 +65,35 @@
     body.user-template-scope .login-page,
     body.user-template-scope .login-container,
     body.user-template-scope .login-card {
-      background: var(--glass-highlight), var(--glass-bg) !important;
+      position: relative;
+      overflow: hidden;
+      background: var(--glass-bg), var(--glass-bg-2) !important;
       color: var(--glass-text);
       border: 1px solid var(--glass-border);
       box-shadow: var(--glass-shadow);
-      backdrop-filter: var(--glass-blur);
+      backdrop-filter: blur(var(--glass-blur)) saturate(var(--glass-sat));
+    }
+
+    body.user-template-scope .glass-card::before,
+    body.user-template-scope .card::before,
+    body.user-template-scope .modal-content::before,
+    body.user-template-scope .dropdown-menu::before,
+    body.user-template-scope .sidebar::before,
+    body.user-template-scope .navbar::before,
+    body.user-template-scope .login-card::before,
+    body.user-template-scope .tab-content::before,
+    body.user-template-scope .alert::before {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: var(--glass-highlight);
+      opacity: 0.35;
+      pointer-events: none;
     }
 
     body.user-template-scope .navbar,
     body.user-template-scope .sidebar {
+      background: var(--glass-bg), var(--glass-bg-2) !important;
       border: 1px solid var(--glass-border);
     }
 
@@ -79,13 +106,13 @@
     }
 
     body.user-template-scope .table-striped > tbody > tr:nth-of-type(odd) > * {
-      background: rgba(90, 255, 210, 0.06) !important;
+      background: rgba(12, 22, 18, 0.35) !important;
     }
 
     body.user-template-scope .nav-tabs .nav-link.active,
     body.user-template-scope .dropdown-menu .dropdown-item.active,
     body.user-template-scope .pagination .page-link.active {
-      background: var(--glass-highlight), var(--glass-bg-strong) !important;
+      background: var(--glass-bg), var(--glass-bg-2) !important;
       color: #f7fffb;
       border-color: var(--glass-border-strong);
     }
@@ -98,7 +125,7 @@
     body.user-template-scope .badge,
     body.user-template-scope .badge.bg-success-subtle,
     body.user-template-scope .badge.bg-warning-subtle {
-      background: var(--glass-highlight), rgba(90, 255, 210, 0.18) !important;
+      background: rgba(12, 22, 18, 0.55) !important;
       color: #f7fffb !important;
       border: 1px solid var(--glass-border);
     }
