--- a/the original project files/dashbord_user.html
+++ b/the original project files/dashbord_user.html
@@ -1536,7 +1536,7 @@
         <div class="progress mb-4">
             <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" class="progress-bar" id="kycProgressBar" role="progressbar" style="width: 0%; background-color: #ff0000;">0%</div>
         </div>
-<p><strong>KYC Status:</strong> <span id="kycStatusLabel">pending</span></p>
+<p><strong>KYC Status:</strong> <span class="status-badge pending" id="kycStatusLabel">pending</span></p>
 <ul class="list-group mb-4">
 <li class="list-group-item d-flex justify-content-between align-items-center">
 <div>
